--- a/app/src/main/res/layout-v21/fragment_movie.xml
+++ b/app/src/main/res/layout-v21/fragment_movie.xml
@@ -5,7 +5,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
         android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/tvshow_rv"
+            android:id="@+id/movie_rv"
             android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:indeterminateTint="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
