--- a/app/src/main/res/layout/activity_movie_tv_detail.xml
+++ b/app/src/main/res/layout/activity_movie_tv_detail.xml
@@ -127,7 +127,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="sans-serif-black"
-                                android:textColor="@color/yellow"
+                                android:textColor="@color/yellowGorse"
                                 android:textSize="24sp"
                                 tools:text="8.9" />
 
@@ -162,7 +162,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-black"
-                            android:textColor="@color/yellow"
+                            android:textColor="@color/yellowGorse"
                             android:textSize="24sp"
                             tools:text="1h 20m" />
 
@@ -187,7 +187,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="sans-serif-black"
                             android:textAllCaps="true"
-                            android:textColor="@color/yellow"
+                            android:textColor="@color/yellowGorse"
                             android:textSize="24sp"
                             tools:text="EN" />
 
