--- a/app/src/main/res/layout/vh_item.xml
+++ b/app/src/main/res/layout/vh_item.xml
@@ -1,112 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="300dp"
+        android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_marginTop="40dp"
-            android:orientation="horizontal"
-            app:cardBackgroundColor="@color/blackFade"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="1dp">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:cardCornerRadius="4dp"
+            app:cardUseCompatPadding="true">
 
-            <LinearLayout
+            <ImageView
+                android:id="@+id/image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="155dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="vertical"
-                android:paddingTop="24dp">
+                android:layout_height="match_parent"
+                android:scaleType="fitXY" />
 
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/poppins_bold"
-                    android:includeFontPadding="false"
-                    android:maxLines="2"
-                    android:textColor="@color/white"
-                    android:textSize="17sp"
-                    tools:text="Superman: Man Of Tomorrow" />
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="12dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                app:cardBackgroundColor="@color/codGray"
+                app:cardCornerRadius="8dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginHorizontal="7dp"
+                    android:layout_marginVertical="2dp"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/baseline_star_black_24dp"
-                        app:tint="@color/yellow" />
+                        app:tint="@color/white" />
 
                     <TextView
                         android:id="@+id/rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginStart="4dp"
-                        android:fontFamily="@font/poppins_medium"
-                        android:includeFontPadding="false"
+                        android:layout_marginStart="8dp"
+                        android:fontFamily="sans-serif-medium"
                         android:textColor="@color/white"
-                        tools:text="4.3" />
+                        android:textSize="14sp"
+                        tools:text="7.9" />
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/genre"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:fontFamily="@font/poppins_medium"
-                    android:textColor="@color/white"
-                    android:textSize="12sp"
-                    tools:text="Animation" />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <TextView
-        android:id="@+id/duration"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_medium"
-        tools:text="2h 15m"
-        android:textColor="@color/white"
-        android:textSize="12sp" />
-    <ImageView
-        android:id="@+id/fav_icon"
-        tools:tint="@color/pink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baseline_favorite_white_24dp"/>
-</LinearLayout>
-
-            </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
         </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
             android:layout_height="wrap_content"
-            app:cardUseCompatPadding="true"
-            app:cardCornerRadius="4dp">
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-medium"
+                tools:text="109.865 votes"/>
+            <TextView
+                android:id="@+id/vote"
+                android:layout_marginTop="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                android:fontFamily="sans-serif"
+                tools:text="109.865 votes"/>
 
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="120dp"
-                android:layout_height="175dp"
-                android:scaleType="fitXY"
-                tools:src="@drawable/poster_aquaman" />
-        </com.google.android.material.card.MaterialCardView>
-    </RelativeLayout>
+        </LinearLayout>
+    </LinearLayout>
+    <!--    <RelativeLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content">-->
+
+    <!--        <com.google.android.material.card.MaterialCardView-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="180dp"-->
+    <!--            android:layout_marginTop="40dp"-->
+    <!--            android:orientation="horizontal"-->
+    <!--            app:cardBackgroundColor="@color/codGray"-->
+    <!--            app:cardCornerRadius="8dp"-->
+    <!--            app:cardElevation="1dp">-->
+
+    <!--            <LinearLayout-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginStart="155dp"-->
+    <!--                android:layout_marginEnd="16dp"-->
+    <!--                android:orientation="vertical"-->
+    <!--                android:paddingTop="24dp">-->
+
+    <!--                <TextView-->
+    <!--                    android:id="@+id/title"-->
+    <!--                    android:layout_width="wrap_content"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:layout_gravity="center_vertical"-->
+    <!--                    android:ellipsize="end"-->
+    <!--                    android:fontFamily="@font/poppins_bold"-->
+    <!--                    android:includeFontPadding="false"-->
+    <!--                    android:maxLines="2"-->
+    <!--                    android:textColor="@color/white"-->
+    <!--                    android:textSize="17sp"-->
+    <!--                    tools:text="Superman: Man Of Tomorrow" />-->
+
+    <!--                <LinearLayout-->
+    <!--                    android:layout_width="wrap_content"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:layout_marginTop="2dp"-->
+    <!--                    android:orientation="horizontal">-->
+
+    <!--                    <ImageView-->
+    <!--                        android:layout_width="wrap_content"-->
+    <!--                        android:layout_height="wrap_content"-->
+    <!--                        android:src="@drawable/baseline_star_black_24dp"-->
+    <!--                        app:tint="@color/yellow" />-->
+
+    <!--                    <TextView-->
+    <!--                        android:id="@+id/rating"-->
+    <!--                        android:layout_width="wrap_content"-->
+    <!--                        android:layout_height="wrap_content"-->
+    <!--                        android:layout_gravity="center_vertical"-->
+    <!--                        android:layout_marginStart="4dp"-->
+    <!--                        android:fontFamily="@font/poppins_medium"-->
+    <!--                        android:includeFontPadding="false"-->
+    <!--                        android:textColor="@color/white"-->
+    <!--                        tools:text="4.3" />-->
+    <!--                </LinearLayout>-->
+
+    <!--                <TextView-->
+    <!--                    android:id="@+id/genre"-->
+    <!--                    android:layout_width="wrap_content"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:layout_marginTop="12dp"-->
+    <!--                    android:fontFamily="@font/poppins_medium"-->
+    <!--                    android:textColor="@color/white"-->
+    <!--                    android:textSize="12sp"-->
+    <!--                    tools:text="Animation" />-->
+    <!--<LinearLayout-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:layout_height="wrap_content"-->
+    <!--    android:orientation="horizontal">-->
+    <!--    <TextView-->
+    <!--        android:id="@+id/duration"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_weight="1"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:fontFamily="@font/poppins_medium"-->
+    <!--        tools:text="2h 15m"-->
+    <!--        android:textColor="@color/white"-->
+    <!--        android:textSize="12sp" />-->
+    <!--    <ImageView-->
+    <!--        android:id="@+id/fav_icon"-->
+    <!--        tools:tint="@color/pink"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:src="@drawable/baseline_favorite_white_24dp"/>-->
+    <!--</LinearLayout>-->
+
+    <!--            </LinearLayout>-->
+    <!--        </com.google.android.material.card.MaterialCardView>-->
+
+    <!--        <com.google.android.material.card.MaterialCardView-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_marginStart="16dp"-->
+    <!--            android:layout_marginTop="12dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            app:cardUseCompatPadding="true"-->
+    <!--            app:cardCornerRadius="4dp">-->
+
+    <!--            <ImageView-->
+    <!--                android:id="@+id/image"-->
+    <!--                android:layout_width="120dp"-->
+    <!--                android:layout_height="175dp"-->
+    <!--                android:scaleType="fitXY"-->
+    <!--                tools:src="@drawable/poster_aquaman" />-->
+    <!--        </com.google.android.material.card.MaterialCardView>-->
+    <!--    </RelativeLayout>-->
 </layout>
