--- a/app/src/main/res/layout-v21/fragment_tvshow.xml
+++ b/app/src/main/res/layout-v21/fragment_tvshow.xml
@@ -4,6 +4,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/tvshow_no_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="19sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/no_data"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tvshow_rv"
             android:layout_marginHorizontal="16dp"
